[project]
name = "rl-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.4.1",
    "faiss-cpu>=1.13.1",
    "huggingface-hub>=0.36.0",
    "litellm>=1.80.8",
    "pillow>=12.0.0",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.3",
    "ua-generator>=2.0.19",
]
